[gd_scene load_steps=11 format=2]

[ext_resource path="res://Entities/PNG/Soldier 1/soldier1_gun.png" type="Texture" id=1]
[ext_resource path="res://Entities/PNG/Soldier 1/soldier1_hold.png" type="Texture" id=2]
[ext_resource path="res://Entities/PNG/Soldier 1/soldier1_machine.png" type="Texture" id=3]
[ext_resource path="res://Entities/PNG/Soldier 1/soldier1_reload.png" type="Texture" id=4]
[ext_resource path="res://Entities/PNG/Soldier 1/soldier1_silencer.png" type="Texture" id=5]
[ext_resource path="res://Entities/PNG/Soldier 1/soldier1_stand.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=7]
[ext_resource path="res://Entities/PNG/emotes/Vector/Style 8/emote_cross.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "reload",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "silencer",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "with_gun",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "stand",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "hold",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "with_machine",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 177.789

[node name="Player" type="KinematicBody2D" groups=[
"humans",
]]
collision_layer = 2
collision_mask = 236
script = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "stand"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -5.64041, 21.2178, 3.18901, 21.2178, 9.07528, 15.3315, 8.23439, 9.235, 12.4389, 5.03052, 12.4389, 3.34873, 14.5411, 0.405588, 9.28551, -7.3727, 8.02416, -15.3612, 4.24013, -21.0373, -4.58928, -21.0373, -8.79377, -15.9919, -8.58354, -12.4181, -16.9925, -11.5772, -17.2027, 13.4395, -10.0551, 14.2804 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 25.6388, 10.05 )

[node name="change_gun_timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="send_bullet_timer" type="Timer" parent="."]
wait_time = 0.15
autostart = true

[node name="Dead_Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="bullet_area2d" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="bullet_area2d"]
shape = SubResource( 2 )

[connection signal="timeout" from="change_gun_timer" to="." method="_on_change_gun_timer_timeout"]
[connection signal="timeout" from="send_bullet_timer" to="." method="_on_send_bullet_timer_timeout"]
[connection signal="timeout" from="Dead_Timer" to="." method="_on_Dead_Timer_timeout"]
[connection signal="body_entered" from="bullet_area2d" to="." method="_on_bullet_area2d_body_entered"]
[connection signal="body_exited" from="bullet_area2d" to="." method="_on_bullet_area2d_body_exited"]
